# kuribox

./: .env  Cargo.toml  README.md
migrations/2022-12-06-210642_users/: up.sql
migrations/2022-12-23-135805_character/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  structures.rs
src/ops/: character_ops.rs  mod.rs  user_ops.rs
