[package]
name = "md_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.2", features = ["postgres"]}
dotenv = "0.15.0"
actix-web = "4"
derive_more ="0.99.17"
serde = {version="1.0.150", features=["derive"]}
serde_json = "1.0.89"
